Version 1.0.1

- Adjust colour icon position on service building panels
- Added Korean translations by  TwotoolusFLY BAUST 


Version 1.0

- Migrate to Harmony 2.0