@@ -1,3 +1,6 @@
+- Copy and paste keystrokes now only recognised when color picker is open
+
+
 Version 1.0.1
 
 - Adjust colour icon position on service building panels
